[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ml-system-toolkit"
version = "0.0.1"
authors = [
  { name="Mohamed Ibrahim Moselhy", email="Mohamed_Moselhy@outlook.com" },
]
description = "A comprehensive machine learning system for model training, evaluation, persistence, and prediction."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/mohamadmoselhy/ml-system-toolkit"
Issues = "https://github.com/mohamadmoselhy/ml-system-toolkit"

# Build configuration to specify included directories
[tool.hatch.build.targets.wheel]
packages = [
    "src/MachineLearning",
    "src/data_utils"
]
